ingress-fundy-fe.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fundy-fe-ingress
  namespace: fundy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # 필요시 "true"
spec:
  ingressClassName: nginx
  rules:
    - host: fundyfe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fundy-fe-service
                port:
                  number: 8080
